<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- title -->
    <string name="title_userlogin">用户登陆</string>
    <string name="title_coursetime">全周课程</string>
    <string name="title_add_course">新增课程</string>
     <string name="title_update_course">修改课程</string>
    <string name="title_book">借阅查询</string>
    <string name="title_about_us">关于我们</string>
    <string name="title_sssess_teacher">教学评估</string>
    
    <!-- left -->
    <string name="motto">请点击右上角小门登录</string>
    <!-- 评教 -->
    <string name="onekey_assess_teacher">一键评教</string>
    
    <string name="app_name">农大课程助手</string>
    <string name="action_settings">Settings</string>
    <string name="userinfo">学生信息</string>
    <string name="classname">课程名</string>
    <string name="yourgrade">您的成绩</string>
    <string name="back">返回主菜单</string>
    <!-- 课程信息 -->
    
    <string name="courseeveryday">每日</string>
    <string name="classinfo">课程信息</string>
    <string name="add_course_name_null">课程名不能为空</string>
    <string name="add_course_teacher_null">任课教师不能为空</string>
    
   <!--图书馆  -->
    <string name="login">登陆</string>
    <string name="studentnumber">学号/工号</string>
    <string name="studentpassword">密 码</string>
    <string name="running">正在查询...</string>
    <string name="library">读者查询</string>
    <string name="borrowinfo">借阅信息</string>
    <string name="onekey_borrow">一键续借</string>
    <!-- 结果 -->
    <string name="username_null">用户名不能为空</string>
    <string name="userpassword_null">密码不能为空</string>
    <string name="login_success">登陆成功</string>
    <string name="login_password_wrong">学号或密码错误</string>
    <string name="login_fail_schoolnet">公共网络暂时无法访问教务系统</string>
    <string name="login_fail">无法访问教务系统</string>
    <string name="login_no_network">请连接网络</string>

       <!-- 关于我们 -->
    <string name="thanks_every_one">&#160;&#160;&#160;
       三年以来,在农大度过了美好的青春年华,也学到了不少东西。在即将毕业之际完善了本APP,仅供学习交流之用,谢谢大家的下载和支持,希望大家喜欢。 </string>
     <string  name="version">version(Android) v2.0.1 beta</string>
     <string  name="author">开发者：孙权 谭奇栋 copyright©2014-2015</string>
     <string name="declear1">&#160;&#160;&#160;
         声明：由于校园网问题,综合服务系统仅限内网访问,只有读者查询无限制。其他功能正待开发,有兴趣的或者反馈可以加入我们。</string>
     <string name="declear2">qq群：177202700</string>
     <!--  -->
    <string name="setting">修改个人资料</string>
    <string name="yixin">个人信息</string>
    <string name="friend">朋友圈</string>
    
    <string name="settingUrl">设置个人网址</string>
	<string name="modify">修改个人信息</string>
	<string name="upload_backgroud_image">上传背景图</string>
	<string name="send_message">发布消息</string>
	<string name="personZone">个人空间</string>
	<string name="uploadImage">上传图片</string>
	<string name="nologin">未登录</string>
	<string name="QQLogin">QQ登录</string>
	<string name="XLLogin">新浪登录</string>
	<string name="WYLogin">网易登录</string>
	<string name="accountbook">装修账簿</string>
	<string name="dailylog">装修日志</string>
</resources>