<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/showleft"
            android:layout_width="@dimen/head_btn_width"
            android:layout_height="@dimen/head_height"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:src="@drawable/top_showleft" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_sssess_teacher"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/booknum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/onekeyborrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/courseColor"
                android:gravity="center"
                android:text="@string/onekey_assess_teacher"
                android:textSize="23sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginTop="5dip"
            android:gravity="center" >

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="3.0px"
                android:text="@string/running"
                android:textColor="#ff000000"
                android:textSize="16sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/showbook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>